When an alias domain is created, the primary domain can now update its configuration as needed. This allows AWstats to work when accessed via the alias domain.
Un-supported script versions can now be installed by the master admin .. but use this feature at your own risk!
Put back the osTicket installer, now that it is available again, and updated it to version 1.6 RC2.
Added a script installer for eTicket version 1.5.6-RC4, a fork of the osTicket project.
The system statistics graphs can now be displayed using IE, as well as Firefox.
---- Changes since 3.51 ----
Updated the Horde script installer to version 3.1.6, and the versions of several other Horde-related scripts.
Updated the Drupal installer to versions 5.7 and 4.7.11, OpenAds to 2.4.3, Mantis to 1.1.1, Joomla to 1.5.0, TWiki 4.2.0, Movable Type to 4.1, WordPress MU to 1.3.2, osTicket to 1.6.rc3, Nucleus to 3.32, and phpMyAdmin to 2.11.4.
When restoring a virtual server that uses features not supported on the system, a warning will be displayed listing the missing or disabled features.
Custom styles can use the nocontent=1 line in style.info to specify that no initial content needs to be entered.
When moving a virtual server to a new system via a restore, if any required PHP modules that were installed on the old system are missing on the new, they will be automatically installed (where possible). In addition, you will be notified if any required PHP versions are missing.
When editing a virtual server without a private IP address, one can be added that is associated with an existing interface on the system.
When a domain is restored to a system with a new IP address, the IP in the SPF record is updated. Also, any NS records are updated to match the new system.
When a virtual server is moved under a new owner, the Apache directives that control which user CGIs and PHP scripts run as are properly updated.
Fixed bugs in the FAQMasterFlex installer that prevented it's config file from being setup properly.