@@ -61,15 +61,8 @@
 	 - no need for variable to not load plugins
 
  - global lock on domain DB, to prevent problems with concurrent ops
-	- or do better per-feature locking, ie. Apache and BIND and user DB
-	- each feature has an obtain_lock_XXX function, which locks some
-	  config file and flushes all in-memory caches (unless already locked
-	  by this process, in which case it does nothing)
 	- FS #3500
 	- Remove debugging code
-	- All CGIs and .pl scripts that do something should call appropriate
-	  lock function first
 	- plugins too
-	- what should mass_domains_change.cgi lock?
 
  - outgoing email bandwidth monitoring
